test/domains/compilerErrors/notsupportedOpCount-rank.chpl

var D = {1..3};
writeln(D#(4,5));
