test/domains/compilerErrors/notsupportedOpCount-rank.good
notsupportedOpCount-rank.chpl:3: error: rank mismatch in '#'
